--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,3 @@
-*.txt
-*.png
-*.log
-*.yaml
-
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -28,14 +23,6 @@ var/
 .installed.cfg
 *.egg
 
-# Logs
-logs/
-*.log
-
-# Runtime data
-*.pid
-*.sqlite
-
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
@@ -52,17 +39,69 @@ coverage.xml
 *.cover
 *.py,cover
 .hypothesis/
+.pytest_cache/
+
+# Translations
+*.mo
+*.pot
+
+# Django stuff:
+*.log
+local_settings.py
+db.sqlite3
+
+# Flask stuff:
+instance/
+.webassets-cache
+
+# Scrapy stuff:
+.scrapy
+
+# Sphinx documentation
+docs/_build/
+
+# PyBuilder
+.pybuilder/
+target/
 
 # Jupyter Notebook
 .ipynb_checkpoints
 
-# VS Code
-.vscode/
+# IPython
+profile_default/
+ipython_config.py
 
-# MacOS
-.DS_Store
+# pyenv
+.python-version
 
-# Others
-*.env
-.env.*
+# celery beat schedule file
+celerybeat-schedule
 
+# SageMath parsed files
+*.sage.py
+
+# Environments
+.env
+.venv
+env/
+venv/
+ENV/
+env.bak/
+venv.bak/
+
+# Spyder project settings
+.spyderproject
+.spyproject
+
+# Rope project settings
+.ropeproject
+
+# mkdocs documentation
+/site
+
+# mypy
+.mypy_cache/
+
+plots/*
+results/*
+logs/*
