--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -69,4 +69,4 @@ jobs:
       #
       - name: Publish to PyPI
         if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-        run: poetry publish --username ${{ secrets.PYPI_USERNAME }} --password ${{ secrets.PYPI_PASSWORD }}
+        run: poetry publish --build -u __token__ -p ${{ secrets.PYPI_TOKEN }}
