--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ matplotlib = "^3.9.2"
 ipaddress = "^1.0.23"
 pyyaml = "^6.0.2"
 appdirs = "^1.4.4"
+loguru = "^0.7.2"
 
 
 [tool.poetry.group.dev.dependencies]
