--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ ipaddress = "^1.0.23"
 pyyaml = "^6.0.2"
 appdirs = "^1.4.4"
 loguru = "^0.7.2"
+pytest = "^8.3.3"
 
 
 [tool.poetry.group.dev.dependencies]
